# Text-Summarizer

./: .gitignore  README.md  app.py  index.html  pyproject.toml  text_summarizer.ipynb
static/: style.css
